added subset finder test